--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.3",
+    "node-mocks-http": "^1.10.1",
     "prettier": "^2.2.1"
   }
 }
