--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "prettier --write common components hooks pages store server",
     "migrate:latest": "knex migrate:latest",
     "test": "jest --watch",
+    "e2e": "nightwatch",
     "kill3000": "lsof -t -i tcp:5050 | xargs kill"
   },
   "dependencies": {
@@ -38,12 +39,14 @@
     "@babel/core": "^7.14.0",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/plugin-proposal-private-methods": "^7.13.0",
+    "@babel/register": "^7.13.16",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.2",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.23",
     "babel-jest": "^26.6.3",
+    "chromedriver": "^90.0.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -53,7 +56,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "geckodriver": "^1.22.3",
     "jest": "^26.6.3",
+    "nightwatch": "^1.6.3",
     "node-mocks-http": "^1.10.1",
     "prettier": "^2.2.1"
   }
