--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@testing-library/react-hooks": "^5.1.2",
     "@testing-library/user-event": "^13.1.8",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
     "chromedriver": "^90.0.0",
     "eslint": "^7.24.0",
